# MediaFlow-Proxy-Light

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.prebuilt  LICENSE  README.md  build-docker.sh  config-example.toml
.github/: .gitlab-ci.yml
.github/workflows/: release.yml  test.yml
config/: default.toml
docs/: DOCKER_OPTIMIZATION.md
src/: config.rs  error.rs  lib.rs  main.rs
src/auth/: encryption.rs  middleware.rs  mod.rs  token.rs
src/models/: mod.rs  request.rs
src/proxy/: config.rs  handler.rs  mod.rs  stream.rs
tests/: auth_tests.rs  config_tests.rs
tools/: benchmark.rs
