[package]
name = "mediaflow-proxy-light"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures = "0.3"
aes = "0.8"
base64 = "0.21"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
async-stream = "0.3"
actix-web-httpauth = "0.8"
jsonwebtoken = "9.2"
time = "0.3"
num_cpus = "1.16.0"
urlencoding = "2.1.3"
