[package]
name = "mediaflow-proxy-light"
version = "0.1.0"
edition = "2021"

[features]
default = []
benchmark = [
    "dep:bollard",
    "dep:futures-util",
    "dep:sysinfo",
    "dep:clap",
    "reqwest/stream",
]

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "json", "socks"] }
futures = "0.3"
aes = "0.8"
base64 = "0.22"
rand = "0.9"
anyhow = "1.0"
thiserror = "2.0"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
async-stream = "0.3"
actix-web-httpauth = "0.8"
jsonwebtoken = "9.2"
time = "0.3"
url = "2.5"
regex = "1.10"
urlencoding = "2.1.3"

# Benchmark-only dependencies
clap = { version = "4.4", features = ["derive"], optional = true }
bollard = { version = "0.15", optional = true }
futures-util = { version = "0.3", optional = true }
sysinfo = { version = "0.29", optional = true }
criterion = { version = "0.5", features = ["async_tokio"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[lib]
name = "mediaflow_proxy_light"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "tools/benchmark.rs"
required-features = ["benchmark"]