[package]
name = "mediaflow-proxy-light"
version = "0.1.0"
edition = "2021"

[features]
default = []
vendored-openssl = ["openssl/vendored"]
benchmark = [
    "dep:bollard",
    "dep:futures-util",
    "dep:sysinfo",
    "dep:clap",
    "reqwest/stream",
]

[profile.release]
# Optimize for speed and enable all optimizations
opt-level = 3
lto = "fat"  # Use fat LTO for maximum optimization
codegen-units = 1
panic = "abort"
strip = true
debug = false

[dependencies]
actix-web = "4.11"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.19", features = ["stream", "json", "socks"] }
futures = "0.3"
aes = "0.8"
base64 = "0.22.1"
rand = "0.9.1"
anyhow = "1.0"
thiserror = "2.0"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.10"
async-stream = "0.3"
actix-web-httpauth = "0.8"
jsonwebtoken = "9.3"
time = "0.3"
url = "2.5"
regex = "1.11"
urlencoding = "2.1"
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Benchmark-only dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
bollard = { version = "0.19", optional = true }
futures-util = { version = "0.3", optional = true }
sysinfo = { version = "0.35", optional = true }
criterion = { version = "0.6", features = ["async_tokio"], optional = true }
actix-cors = "0.7"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[lib]
name = "mediaflow_proxy_light"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "tools/benchmark.rs"
required-features = ["benchmark"]
